--- a/project3/styles/style2.css
+++ b/project3/styles/style2.css
@@ -65,16 +65,29 @@ body main section.about2 section.description2 {
   display: flex;
   flex-wrap: wrap;
   background-color: blanchedalmond;
+  margin: 0 0.5rem;
+  border-radius: 15px;
   justify-content: center;
 }
 body main section.about2 section.description2 .motivation {
   display: inline-block;
   width: 50%;
-  margin: 0rem;
-  padding: rem;
+  margin-top: 1rem;
+  padding: 0rem;
   border-radius: 20px;
   text-align: center;
   background-color: rgb(103, 242, 177);
+  transition: all 0.5s ease-in;
+}
+body main section.about2 section.description2 .motivation h1 {
+  padding: 0.5rem 0;
+}
+body main section.about2 section.description2 .motivation:hover h1 {
+  scale: 1.2;
+}
+body main section.about2 section.description2 h2 {
+  font-size: 1.5rem;
+  padding: 1rem;
 }
 body main section.progressLearning {
   display: flex;
@@ -99,6 +112,7 @@ body main section.progressLearning .textContent h1::after i {
   right: 0;
 }
 body main section.progressLearning .textContent h2 {
+  font-size: 1.5rem;
   margin-top: 1rem;
 }
 body main section.progressLearning .game-links {
@@ -127,7 +141,7 @@ body main section.timeAllocation {
   background-color: #1ea3eb;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 1rem 0;
+  margin: 1rem 0.5rem;
   justify-content: center;
 }
 body main section.timeAllocation h1 {
@@ -168,6 +182,7 @@ body main section.timeAllocation .circle {
   padding: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
+  transition: all 0.5s linear;
 }
 body main section.timeAllocation .circle h2 {
   font-size: 1.2rem;
@@ -175,9 +190,185 @@ body main section.timeAllocation .circle h2 {
   word-wrap: break-word;
   overflow: hidden;
 }
-body main section.decideChooseReturn {
-  background-color: rgba(129, 244, 209, 0.4);
+body main section.timeAllocation .circle:hover {
+  background-color: #e9b65d;
+  scale: 1.2;
+}
+body main section.outRange {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgba(229, 174, 103, 0.3);
+  padding: 1rem;
+  margin: 0 0.5rem;
+  border-radius: 22px;
+  position: relative;
+  z-index: 1;
+}
+body main section.outRange section.decideChooseReturn {
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgba(141, 231, 231, 0.4);
   border-radius: 20px;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: auto;
+  height: auto;
+  z-index: 1;
+  justify-content: center;
+}
+body main section.outRange section.decideChooseReturn .software {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  padding: 0 0.5rem;
+  border-radius: 25px;
+  margin-bottom: 1rem;
+  background-color: rgb(182, 236, 182);
+}
+body main section.outRange section.decideChooseReturn .software h1 {
+  text-align: center;
+}
+body main section.outRange section.decideChooseReturn h2 {
+  font-size: 1.5rem;
+}
+body main section.dealWithEmotions {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-radius: 80px;
+  margin: 1rem 0.5rem;
+  background-color: rgb(89, 179, 224);
+}
+body main section.dealWithEmotions .emoProgress {
+  width: 70%;
+  border-radius: 25px;
+  background-color: rgb(235, 226, 145);
+  margin-top: 1rem;
+}
+body main section.dealWithEmotions .emoProgress h1 {
+  margin: 0.3rem 0.5rem;
+  text-align: center;
+}
+body main section.dealWithEmotions .emodetail {
+  width: 100%;
+  background-color: rgb(152, 232, 197);
+  border-radius: 40px;
+  padding: 1rem;
+  margin: 1rem 0.5rem;
+}
+body main section.dealWithEmotions .emodetail h2 {
+  font-size: 1.5rem;
+}
+body main section.technologyNote {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-radius: 25px;
+  background-color: rgb(244, 202, 138);
+  margin: 0 0.5rem;
+  z-index: 1;
+}
+body main section.technologyNote .noteHeader {
+  display: flex;
+  flex-wrap: wrap;
+  width: 70%;
+  height: 10vh;
+  border-radius: 40px;
+  background-color: rgb(92, 115, 170);
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  border: 5px solid black;
+}
+body main section.technologyNote .noteHeader h1 {
+  font-size: 2.5rem;
+  color: white;
+}
+body main section.technologyNote .notedetail {
+  border: 2px solid black;
+  border-radius: 25px;
+  border: 2px solid black;
+  z-index: 2;
+  background-color: rgb(217, 255, 134);
+  padding: 1rem;
+  margin: 1rem;
+}
+body main section.technologyNote .notedetail h2 {
+  font-size: 1.5rem;
+}
+body main section.myjobAndSociety {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: lightblue;
+  margin: 1rem 0.5rem;
+  border-radius: 30px;
+}
+body main section.myjobAndSociety .attactSociety {
+  display: flex;
+  flex-wrap: wrap;
+  width: 70%;
+  height: 15vh;
+  border-radius: 90px;
+  background-color: lemonchiffon;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  border: 5px solid black;
+}
+body main section.myjobAndSociety .attactSocietydetail {
+  border: 2px solid black;
+  border-radius: 30px;
+  border: 2px solid black;
+  z-index: 2;
+  background-color: rgb(217, 255, 134);
+  padding: 1rem;
+  margin: 1rem;
+}
+body main section.myjobAndSociety .attactSocietydetail h2 {
+  font-size: 1.5rem;
+}
+body main .tellSomething {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: lightgoldenrodyellow;
+  margin: 1rem 0.5rem;
+  border-radius: 30px;
+}
+body main .tellSomething .tellToBootcamps {
+  display: flex;
+  flex-wrap: wrap;
+  width: 60%;
+  height: 15vh;
+  border-radius: 60px;
+  background-color: lightblue;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  border: 5px solid black;
+}
+body main .tellSomething .tellContent {
+  border: 2px solid black;
+  border-radius: 30px;
+  border: 2px solid black;
+  z-index: 2;
+  background-color: rgba(141, 231, 231, 0.4);
+  padding: 1rem;
+  margin: 1rem;
+  transition: all 0.5s linear;
+}
+body main .tellSomething .tellContent h2 {
+  font-size: 1.5rem;
+}
+body main .tellSomething .tellContent:hover {
+  background-color: rgb(249, 203, 112);
 }
 
 .fa-solid.fa-arrow-right.fa-2xl {
